src/styles/partials/layout.scss
.p-panel {
  &__inner {
    @extend %vf-grid-container-padding;
  }

  &__controls {
    align-items: center;
    display: flex;
    gap: 1rem;
  }
}

.l-aside {
  background-color: $colors--light-theme--background-default;

  .is-dark &,
  .is-dark & fieldset {
    background-color: $colors--dark-theme--background-alt;
  }

  .l-application & {
    z-index: var(--z-sidepanel);
  }
}

.l-navigation-bar {
  @media (width >= 620px) {
    width: 3rem;
  }
}

.divided-blocks {
  display: flex;
  justify-content: end;

  &__item {
    &:not(:last-child) {
      padding-right: $sph--small;
    }

    &:not(:first-child) {
      &::before {
        color: $color-mid-light;
        content: "\007c";
        margin-right: $sph--small;
      }
    }
  }
}

.is-detached {
  .p-tooltip__message {
    max-width: 20rem;
    white-space: normal;
    width: max-content;
    z-index: var(--z-tooltip);
  }
}

.p-contextual-menu__dropdown {
  background-color: $colors--theme--background-default;
  z-index: var(--z-dropdown);
}

.p-tabs {
  overflow: visible;
}

